exports[`render correctly Footer Component render correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "paddingVertical": 15,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#CD5C5C",
      }
    }>
    Remove completed items
  </Text>
</TouchableOpacity>
`;

exports[`render correctly Input Component check function 1`] = `
<View
  style={undefined}>
  <TextInput
    blurOnSubmit={false}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Type here, then enter"
    style={
      Object {
        "height": 50,
        "padding": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="" />
</View>
`;

exports[`render correctly Input Component render correctly 1`] = `
<View
  style={undefined}>
  <TextInput
    blurOnSubmit={false}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Type here, then enter"
    style={
      Object {
        "height": 50,
        "padding": 15,
      }
    }
    underlineColorAndroid="transparent"
    value="" />
</View>
`;

exports[`render correctly List Component check function 1`] = `
<ScrollView
  style={
    Object {
      "flex": 1,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "textDecorationLine": "none",
        }
      }>
      sleep
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Object {
              "borderColor": "black",
              "borderWidth": 2,
              "height": 20,
              "width": 20,
            }
          } />
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#CD5C5C",
              "fontSize": 26,
              "marginLeft": 10,
            }
          }>
          ×
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "textDecorationLine": "line-through",
        }
      }>
      work
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Object {
              "borderColor": "black",
              "borderWidth": 2,
              "height": 20,
              "width": 20,
            }
          }>
          <View
            style={
              Object {
                "backgroundColor": "black",
                "flex": 1,
                "margin": 2,
              }
            } />
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#CD5C5C",
              "fontSize": 26,
              "marginLeft": 10,
            }
          }>
          ×
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</ScrollView>
`;

exports[`render correctly List Component render correctly 1`] = `
<ScrollView
  style={
    Object {
      "flex": 1,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "textDecorationLine": "none",
        }
      }>
      sleep
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Object {
              "borderColor": "black",
              "borderWidth": 2,
              "height": 20,
              "width": 20,
            }
          } />
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#CD5C5C",
              "fontSize": 26,
              "marginLeft": 10,
            }
          }>
          ×
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "whitesmoke",
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "textDecorationLine": "line-through",
        }
      }>
      work
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <View
          style={
            Object {
              "borderColor": "black",
              "borderWidth": 2,
              "height": 20,
              "width": 20,
            }
          }>
          <View
            style={
              Object {
                "backgroundColor": "black",
                "flex": 1,
                "margin": 2,
              }
            } />
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#CD5C5C",
              "fontSize": 26,
              "marginLeft": 10,
            }
          }>
          ×
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</ScrollView>
`;

exports[`render correctly Title Component render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "cyan",
      "padding": 15,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#FFFFFF",
        "textAlign": "center",
      }
    }>
    Todo List
  </Text>
</View>
`;
